--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon ./lecture/2myjs.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "date-fns": "^2.30.0",
+    "express": "^4.18.2",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
