--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "date-fns": "^2.30.0",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "uuid": "^9.0.1"
   },
